--- a/assets/reset.css
+++ b/assets/reset.css
@@ -15,5 +15,31 @@ font-size: 32px;
 
  #today{
     border: solid 1px black;
-    padding: 20px 0px 50px 10px;
+    padding: 20px 0px 20px 10px;
  }
+
+ #forecast{
+
+   display: flex;
+   align-items: center;
+   justify-content: space-evenly;
+   border: solid 5px black;
+   width:auto;
+   height: 400px;
+ }
+
+.weatherForecast{
+   background-color: aqua;
+   border: solid 5px black;
+   width: 17%;
+   height:75%;
+
+}
+
+h2{
+   color: white;
+}
+
+p{
+   color: white;
+}
