--- a/assets/reset.css
+++ b/assets/reset.css
@@ -45,3 +45,19 @@ img{
    width:50px;
    height: 50px;
 }
+
+.list-group > button{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   padding: 20px;
+   margin: 10px;
+   border-radius: 10px;
+   height: 30px;
+   font-size: 30px;
+}
+
+.list-group{
+   border: solid 2px black;
+   height: 500px;
+}
